--- a/kubernetes/app2.yaml
+++ b/kubernetes/app2.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: flask-container
-          image: us-central1-docker.pkg.dev/zatca-428614/gke-cicd/flask-image
+          image: me-central2-docker.pkg.dev/zatca-428614//flask-image
           ports:
             - containerPort: 8081
 
