--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,21 +4,21 @@ steps:
   id: 'Build Docker Image'
 
   # images:
-  # - 'us-central1-docker.pkg.dev//gke-cicd/quickstart-image'
+  # - 'me-central2-docker.pkg.dev//gke-cicd/quickstart-image'
 
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'me-central2-docker.pkg.dev/zatca-428614/gke-cicd/quickstart-image' ]
   id: 'Push Docker Image'
 
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'us-central1-docker.pkg.dev/zatca-428614/gke-cicd/flask-image', './app2' ]
+  args: ['build', '-t', 'me-central2-docker.pkg.dev/zatca-428614/gke-cicd/flask-image', './app2' ]
   id: 'Build Docker Image2'
 
   # images:
-  # - 'us-central1-docker.pkg.dev//gke-cicd/quickstart-image'
+  # - 'me-central2-docker.pkg.dev//gke-cicd/quickstart-image'
 
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'us-central1-docker.pkg.dev/zatca-428614/gke-cicd/flask-image' ]
+  args: ['push', 'me-central2-docker.pkg.dev/zatca-428614/gke-cicd/flask-image' ]
   id: 'Push Docker Image2'
 
 
@@ -28,9 +28,9 @@ steps:
   - -xe
   - -c
   - |
-    gcloud deploy apply --file deploy/pipeline.yaml --region=us-central1
-    gcloud deploy apply --file deploy/dev.yaml --region=us-central1
-    gcloud deploy releases create 'app-release-${SHORT_SHA}' --delivery-pipeline=gke-cicd-pipeline --region=us-central1 --skaffold-file=skaffold.yaml
+    gcloud deploy apply --file deploy/pipeline.yaml --region=me-central2
+    gcloud deploy apply --file deploy/dev.yaml --region=me-central2
+    gcloud deploy releases create 'app-release-${SHORT_SHA}' --delivery-pipeline=gke-cicd-pipeline --region=me-central2 --skaffold-file=skaffold.yaml
 
 
 options:
